assets/stylesheets/main.css
#name{
	font-size: 175%;
	font-weight: 500;
	width: 170%;
	padding-left: 45%;
	/*font-weight: 500;
	font-size: 175%;
	color: #000000;*/
	/*vertical-align: middle;*/
	/*padding-left: 1.5%;*/
	/*line-height: 22.5px !important;*/
}

#first-name{
	color:#0095B7;
}

nav{
	height: 45px;
}
#portfolio{

	font-size: 130%;
	font-weight: 900;

}

#contact{
	font-size: 130%;
}

ul{
	padding-right: 2.8%;
}

